force-app/main/default/objects/Attendence_Details__c/Attendence_Details__c.object-meta.xml
<CustomObject>
    <label>Attendence Details</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Attendence Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendence Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>