force-app/main/default/objects/Attendence_Details__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <formula>(FLOOR((CheckOutTime__c - CheckInTime__c)*24))
+
(((((CheckOutTime__c - CheckInTime__c)*24)-FLOOR((CheckOutTime__c - CheckInTime__c)*24))*60)/100)</formula>
    <label>Working Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>