force-app/main/default/objects/Attendence_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>CheckInTime__c</columns>
    <columns>CheckOutTime__c</columns>
    <columns>Working_Hours__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Domain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>